deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-keycloak
  labels:
    app: frontend-keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-keycloak
  template:
    metadata:
      labels:
        app: frontend-keycloak
    spec:
      containers:
      - name: frontend-keycloak
        # image: hoooo/frontend_0131
        image: ghcr.io/shclub/vue3:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
